--- a/mern-app/package.json
+++ b/mern-app/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-gesture-gallery": "^1.1.0",
+    "react-gesture-responder": "^2.1.0",
+    "react-icons": "^3.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
