--- a/mern-app/package.json
+++ b/mern-app/package.json
@@ -15,6 +15,7 @@
     "react-spring": "^8.0.27",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
