--- a/backend/package.json
+++ b/backend/package.json
@@ -5,20 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "set NODE_ENV==='development' && nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^8.0.1",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.6",
     "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
