--- a/backend/client/package.json
+++ b/backend/client/package.json
@@ -52,5 +52,6 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^24.9.0"
-  }
+  },
+  "proxy": "http://localhost:5001"
 }
