--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "set NODE_ENV==='development' && nodemon server.js"
+    "server": "set NODE_ENV==='development' && nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "@hapi/boom": "^8.0.1",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.0.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
