--- a/backend/client/package.json
+++ b/backend/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "jwt-decode": "^2.2.0",
     "md5": "^2.2.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
