Algunas cuentas nuevas de ej.

--- a/backend/EXAMPLE.env
+++ b/backend/EXAMPLE.env
@@ -6,3 +6,8 @@ API_KEY_TOKEN_PRIVATE= 1f99f4ebbb22bb77eeb46a3112042636239cd50f78585f029f8266462
 
 GOOGLE_ID_CLIENT = 
 GOOGLE_SECRET_CLIENT = 
+
+
+pablodoe@gmail.com
+johndoe@gmail.com
+mariagg@gmail.com
