--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,13 @@
     "classnames": "^2.2.6",
     "jwt-decode": "^2.2.0",
     "md5": "^2.2.1",
+    "moment-timezone": "^0.5.27",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-gesture-gallery": "^1.1.0",
     "react-gesture-responder": "^2.1.0",
     "react-icons": "^3.7.0",
+    "react-moment": "^0.9.6",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
